# djangobible

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  manage.py  noxfile.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requriements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  django.yml  release.yml  tests.yml
django_scripture_index/: __init__.py  constants.py  errors.py  models.py  utilities.py
djangobible/: __init__.py  apps.py  fields.py  forms.py  models.py  validators.py
djangobible/migrations/: 0001_initial.py  __init__.py
djangobible/templatetags/: verse_tags.py
test_django_app/: __init__.py  admin.py  apps.py  models.py  views.py
test_django_app/migrations/: 0001_initial.py  0002_testsingleverseobject.py  0003_alter_testsingleverseobject_verse.py  __init__.py
test_django_app/templates/: verse_tags.html
test_django_app/tests/: __init__.py  conftest.py  factories.py  test_admin.py  test_models.py  test_search.py  test_tags.py  test_tags_functional.py  test_validators.py
test_django_app/tests/functional_tests/: test_admin.py  test_tags_functional.py
test_django_app/tests/unit_tests/: test_models.py  test_search.py  test_tags.py
test_django_project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
tests/: test_utilities.py
