[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "djangobible"
author = "Nathan Patton"
author-email = "npatton@gmail.com"
home-page = "https://github.com/avendesora/djangobible"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python = ">=3.8"
requires = [
    "Django>=4.2.0",
    "pythonbible==0.13.1",
]

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"
